--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,3 +1,9 @@
+<%if @user.try(:errors) %>
+  <h3 style="color: red"><%= @user.errors.full_messages %></h3>
+<% end %>
+<%if flash[:notice] %>
+  <h3 style="color: red"><%= flash[:notice] %></h3>
+<% end %>
 <form action='/users' method='post' role="form">
   <div class="form-group">
     <label for="inputUsername">Username</label>
